rpi5/crosswatch/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: crosswatch
  labels:
    app: crosswatch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crosswatch
  serviceName: crosswatch
  template:
    metadata:
      name: crosswatch
      labels:
        app: crosswatch
    spec:
      containers:
        - name: crosswatch
          image: ghcr.io/cenodude/crosswatch:0.13.3@sha256:d7cfc99a662acf0535bc6aa37afafaceb554f6027a7da4c4b3ce4cf69d89f8bf
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8787
              protocol: TCP
              name: http
          volumeMounts:
            - mountPath: /config
              name: config
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: [ "ReadWriteOnce" ]
        resources:
          requests:
            storage: 1Gi
