rpi5/crosswatch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crosswatch
spec:
  selector:
    app: crosswatch
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
  type: ClusterIP
