rpi5/crosswatch/ingress-public.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: crosswatch-public
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`crosswatch.anshulg.direct`)
      middlewares:
        - name: security-headers
          namespace: kube-system
      services:
        - name: crosswatch
          port: 80
  tls:
    secretName: crosswatch-public-cert-tls
    domains:
      - main: crosswatch.anshulg.direct
